--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<div class="inner">
 								<!-- Here is a heading where you can put your name -->
 								<h1>
-									First Last
+									Callie Clontz
 								</h1>
 								<!-- 	Here is an image where you can put a picture of you. 
 									You can change the width and height attributes below to change how large
@@ -53,7 +53,9 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> Institution
+									Position <br> Visiting Researcher
+											Max-Planck Institute for Astronomy
+											\n & University of Utah
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
