--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<p>
 									Position <br> Visiting Researcher
 											Max-Planck Institute for Astronomy
-											\n & University of Utah
+											<br> & University of Utah
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
