--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
-								<p> <b>Visiting Researcher<b>: Max-Planck Institute for Astronomy
-								<br> <b>Ph.D. Candidate<b>: University of Utah
+								<p> <b>Visiting Researcher</b>: Max-Planck Institute for Astronomy
+								<br> <b>Ph.D. Candidate</b>: University of Utah
 									
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
